vless-reality/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vless-reality
  labels:
    app: vless-reality
  annotations:
    metallb.universe.tf/loadbalancer-ips: "37.59.154.7"
spec:
  type: LoadBalancer
  ports:
    - name: vless-reality
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: vless-reality
