vless-reality/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vless-reality
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
spec:
  tls:
    - hosts:
        - www.cloudflare.com
      secretName: vless-reality-tls
  rules:
    - host: www.cloudflare.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vless-reality
                port:
                  number: 443
